Mocked out DOM, websocket and localStorage

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "lodash":         "1.0.x"
   },
   "devDependencies": {
-    "mocha":          "1.8.1",
-    "chai":           "1.5.0"
+    "chai":           "1.5.0",
+    "jsdom":          "0.5.3",
+    "localStorage":   "1.0.2",
+    "mocha":          "1.8.1"
   },
   "scripts": {
     "test":           "cake test"
